Edit finance tests